# linux-desktop-builder

./: .gitignore  <output>  CMakeCache.txt  CMakeLists.txt  PKGBUILD  README.md  cmake_install.cmake  main.c
